--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,12 +11,43 @@
 .side-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.chat-create {
+  font-size: 10px;
+}
+
+.chat-create a{
+  text-decoration: none;
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  padding: 14px;
 }
 
 .rooms{
   height: calc( 100vh - 100px);
   background-color: #2f3e51;
-  padding: 0 20px;
+  padding: 0 20px 0 20px;
+  overflow: scroll;
+}
+
+.room {
+  padding: 20px 0 40px;
+}
+
+
+.room-name a {
+  text-decoration: none;
+  color: white;
 }
 
 .chat {
