--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,36 +12,7 @@
 </div>
 
 <div class="messages">
-  <div class="message">
-    <div class="message-title">
-      <div class="message-name">
-        Tom
-      </div>
-      <div class="when-message">
-        2020/3/31(wed) 12:43:30
-      </div>
-    </div>
-    <div class="message-text">
-      <div class="message-content">
-        おはよう
-      </div>
-    </div>
-  </div>
-  <div class="message">
-    <div class="message-title">
-      <div class="message-name">
-        Sim
-      </div>
-      <div class="when-message">
-        2020/3/31(wed) 12:43:30
-      </div>
-    </div>
-    <div class="message-text">
-      <div class="message-content">
-        こんばんは
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
