--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="message-header">
   <div class="left-header">
     <div class="header-title">
-      hogefuga
+       <%= @room.name %>
     </div>
   </div>
   <div class="right-header">
