--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -90,12 +90,12 @@
   padding: 10px 0;
 }
 
-.message-title {
+.upper-message {
   display: flex;
   margin: 0 0 10px 0;
 }
 
-.message-name {
+.message-user {
   font-size: 16px;
   color: #434A54;
   margin: 0 10px 0 0;
